--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "@types/express": "^4.17.21",
     "@types/compression": "^1.7.5"
   }
