--- a/package.json
+++ b/package.json
@@ -68,7 +68,12 @@
     "vaul": "^0.9.3",
     "zod": "^3.23.8",
     "express": "^4.19.2",
-    "compression": "^1.7.4"
+    "compression": "^1.7.4",
+    "vite": "^5.4.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -76,19 +81,13 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
     "@types/express": "^4.17.21",
     "@types/compression": "^1.7.5"
   }
